trivia game added

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,8 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <img class="img-thumbnail project" src="assets/images/placeholder-1.jpg" alt="Project 1">
+                       <a href = https://casongordy.github.io/TriviaGame-/>
+                        <img class="img-thumbnail project" src="assets/images/globe.jpg" alt="Geography Trivia">
                     </div>
                     <div class="col-md-6">
                         <img class="img-thumbnail project" src="assets/images/placeholder-1.jpg" alt="Project 1">
